--- a/styles.css
+++ b/styles.css
@@ -101,7 +101,7 @@
     font-weight: 400;
     display: flex;
     gap: 30px;
-    width: 300px;
+    width: 350px;
     padding-left: 5px;
     padding-right: 20px;
     border-radius: 50px;
@@ -123,8 +123,9 @@
     cursor: pointer;  
 }
 
-.hire-button{
+.hire-button h1{
     color: var(--background-color);
+
 }
 
 
@@ -214,5 +215,57 @@
 .all-star{
     display: flex;
     flex-direction: column;
-    justify-content: left;
+    align-items: end;
+}
+
+.all-star h1{
+    font-size: 40px;
+}
+
+/* experience section */
+.experience-left p, h1{
+    font-family: Poppins, arial;
+    color: var(--accent-color);
+}
+
+.experience-left h1{
+    margin: 0;
+    font-size: 40px;
+}
+
+.experience-left p{
+    margin: 0;
+    font-size: 20px;
+}
+
+.time{
+    font-family: poppins, arial;
+    color: var(--secondary-text-color);
+    display: flex;
+    justify-content: space-between;
+}
+
+.experience-right h1{
+    margin-top: 0px;
+}
+
+.experience-both{
+    display: flex;
+    justify-content: space-between;
+    margin: 200px 0;
+    align-items: center;
+    
+
+    background: rgb(43, 23, 22);
+    padding: 80px 110px;
+    width: 1690px;
+    position: absolute;
+    top: 1080px;
+    left: 0;
+
+    
+}
+
+hr{
+    border: 1px solid var(--secondary-color);
 }
